[workspace]
members = [
    "constants",
    "database",
    "excel_parser",
    "interpreter",
    "logger", "materials",
    "orders", "procedures",
#    "common_logger",
]
resolver = "2"

#[workspace.metadata.scripts] # Или просто используй флаг в [package] если это корневой проект
# Но стандартный способ для воркспейса:

default-members = ["interpreter"]
