[workspace]
members = [
    "constants", "cutting_tasks_creator",
    "database",
    "excel_parser", "expense_parser",
    "interpreter",
    "logger", "materials",
    "orders", "procedures", "tasks",

#    "common_logger",
]
resolver = "2"

#[workspace.metadata.scripts] # Или просто используй флаг в [package] если это корневой проект
# Но стандартный способ для воркспейса:

#default-members = ["excel_parser"]
#default-members = ["expense_parser"]
default-members = ["cutting_tasks_creator"]
