[package]
name = "cutting_tasks_creator"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
#log = "0.4.32"
#regex = "1.12.4"
tokio = { version = "1.52.1", features = ["full"] }

database = { path = "../database" }
orders = { path = "../orders" }
procedures = { path = "../procedures" }
materials = { path = "../materials" }
interpreter = { path = "../interpreter" }
logger = { path = "../logger" }
tasks = { path = "../tasks" }
constants = { path = "../constants" }


sqlx = "0.9.0"

# Работа с JSON
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"



## Асинхронный рантайм
#tokio = { version = "1.40", features = ["full"] }
#
## Работа с Excel
#calamine = "0.34.0"
##calamine = "0.26"
#
## Исправленный блок sqlx
#sqlx = { version = "0.9.0", features = [ "postgres", "runtime-tokio", "macros", "chrono", "rust_decimal" ] }
##sqlx = { version = "0.8", features = [
##    "runtime-tokio", # Указываем рантайм
##    "tls-rustls", # Указываем библиотеку TLS отдельно
##    "postgres",
##    "chrono",
##    "macros",
##    "rust_decimal",
##] }
#
#rust_decimal = { version = "1.34", features = ["serde-float"] }
#
## Работа со временем
#chrono = { version = "0.4", features = ["serde"] }
#
## Обработка ошибок
#anyhow = "1.0"
#
## .env файл
#dotenvy = "0.15"
#
## Работа с JSON
#serde = { version = "1.0", features = ["derive"] }
#serde_json = "1.0"
#
##stats_alloc = "0.1.10"
##dhat = "0.3.3"
#
##common_logger = { path = "../common_logger" }
#logger = { path = "../logger" }
#
#tracing = "0.1"

