[package]
name = "excel_parser"
version = "0.1.0"
edition = "2024"

[dependencies]
# Асинхронный рантайм
tokio = { version = "1.40", features = ["full"] }

# Работа с Excel
calamine = "0.34.0"
#calamine = "0.26"

# Исправленный блок sqlx
sqlx = { version = "0.8", features = [
    "runtime-tokio", # Указываем рантайм
    "tls-rustls", # Указываем библиотеку TLS отдельно
    "postgres",
    "chrono",
    "macros",
    "rust_decimal",
] }

rust_decimal = { version = "1.34", features = ["serde-float"] }

# Работа со временем
chrono = { version = "0.4", features = ["serde"] }

# Обработка ошибок
anyhow = "1.0"

# .env файл
dotenvy = "0.15"

# Работа с JSON
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

#stats_alloc = "0.1.10"
#dhat = "0.3.3"

#common_logger = { path = "../common_logger" }
logger = { path = "../logger" }

tracing = "0.1"
