[package]
name = "interpreter"
version = "0.1.0"
edition = "2024"

[dependencies]
regex = "1.12.3"
anyhow = "1.0.102"
tokio = { version = "1.52.1", features = ["full"] }

database = { path = "../database" }
procedures = { path = "../procedures" }
orders = { path = "../orders" }
materials = { path = "../materials" }
log = "0.4.29"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.9.0", features = [ "postgres", "runtime-tokio", "macros", "chrono" ] }
#sqlx = { version = "0.8.6", features = [ "postgres", "runtime-tokio", "macros", "chrono" ] }
#sqlx = "0.9.0-alpha.1"

logger = { path = "../logger" }
