[package]
name = "logger"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }

# Если используешь sqlx, добавь поддержку chrono и там
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "macros"] }
#sqlx = "0.9.0-alpha.1"
serde_json = "1.0.149"

# Фича "serde" нужна для сериализации в JSON
# Фича "clock" нужна для получения текущего времени Utc::now()
chrono = { version = "0.4", features = ["serde", "clock"] }
anyhow = "1.0.102"
