[package]
name = "materials"
version = "0.1.0"
edition = "2024"

[dependencies]

sqlx = { version = "0.9.0-alpha.1", features = [
    "runtime-tokio", # Указываем рантайм
    "tls-rustls", # Указываем библиотеку TLS отдельно
    "postgres",
    "chrono",
    "macros",
    "rust_decimal",
] }

serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"

constants = { path = "../constants" }
database = { path = "../database" }
anyhow = "1.0.102"
